--- a/src/Roslyn/Generator/Generator.csproj
+++ b/src/Roslyn/Generator/Generator.csproj
@@ -5,14 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Kehlet.SourceGenerator.Prelude" Version="1.1.1" PrivateAssets="all"/>
+    <PackageReference Include="Kehlet.SourceGenerator.Prelude" Version="1.2.0" PrivateAssets="all"/>
     <PackageReference Include="Kehlet.Generators.LoadAdditionalFiles" Version="1.0.6" PrivateAssets="all"/>
     <PackageReference Include="Meziantou.Polyfill" Version="1.0.42" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive"/>
-    <PackageReference Include="System.CodeDom" Version="9.0.2" OutputItemType="Analyzer" />
+    <PackageReference Include="System.CodeDom" Version="9.0.3" OutputItemType="Analyzer" />
   </ItemGroup>
-  
+
   <ItemGroup>
-    <AdditionalFile Include="../../StaticContent/Files/**/*.cs" Visible="false" />
+    <AdditionalFile Include="../../StaticContent/Files/**/*.cs" Visible="false"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="../../StaticContent/Files/**/*.cs" Visible="false"/>
   </ItemGroup>
 
 </Project>
