--- a/src/Roslyn/Generator/Generator.csproj
+++ b/src/Roslyn/Generator/Generator.csproj
@@ -6,17 +6,20 @@
 
   <ItemGroup>
     <PackageReference Include="Kehlet.SourceGenerator.Prelude" Version="1.2.0" PrivateAssets="all"/>
-    <PackageReference Include="Kehlet.Generators.LoadAdditionalFiles" Version="1.0.6" PrivateAssets="all"/>
+    <PackageReference Include="Kehlet.Generators.LoadAdditionalFiles" Version="1.1.3" PrivateAssets="all" />
     <PackageReference Include="Meziantou.Polyfill" Version="1.0.42" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive"/>
     <PackageReference Include="System.CodeDom" Version="9.0.3" OutputItemType="Analyzer" />
   </ItemGroup>
 
   <ItemGroup>
-    <AdditionalFile Include="../../StaticContent/Files/**/*.cs" Visible="false"/>
+    <AdditionalFiles Include="../../StaticContent/Files/ConstantMethodAttribute.cs" Visible="false"/>
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="../../StaticContent/Files/**/*.cs" Visible="false"/>
+    <Compile Include="../../StaticContent/Files/ConstantMethodAttribute.cs" Visible="false"/>
+    <Compile Update="ConstantMethodGenerator.Emitter.cs">
+      <DependentUpon>ConstantMethodGenerator.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
